# guardwatch-agent

./: .gitignore  CMakeLists.txt  Makefile  README.md  copy.sh
3rd/gfc-0.1.0/include/: gfc_date.h
3rd/libuv-1.44.1/.github/workflows/: CI.yml
3rd/libuv-1.44.1/src/unix/: core.c
3rd/net-snmp-5.9.4/: .appveyor.yml  config.sub
3rd/net-snmp-5.9.4/include/net-snmp/: types.h
3rd/rrdtool-1.8.0/: rrdtool-1.8.0.udb
3rd/rrdtool-1.8.0/po/: fr.po  hu.po
3rd/rrdtool-1.8.0/win32/: Makefile.msc  Makefile_vcpkg.msc  README  collect_rrdtool_vcpkg_files.bat  librrd-8.rc  rrdcgi.rc  rrdtool.rc  rrdupdate.rc
3rd/sqlite-3.43.2/: Makefile  config.status  config.sub  libtool  sqlite3.pc  sqlite_cfg.h
3rd/sqlite-3.43.2/lemon.dSYM/Contents/Resources/DWARF/: lemon
3rd/sqlite-3.43.2/lemon.dSYM/Contents/Resources/Relocations/x86_64/: lemon.yml
3rd/sqlite-3.43.2/mkkeywordhash.dSYM/Contents/Resources/DWARF/: mkkeywordhash
3rd/sqlite-3.43.2/mkkeywordhash.dSYM/Contents/Resources/Relocations/x86_64/: mkkeywordhash.yml
3rd/sqlite-3.43.2/mksourceid.dSYM/Contents/Resources/DWARF/: mksourceid
3rd/sqlite-3.43.2/mksourceid.dSYM/Contents/Resources/Relocations/x86_64/: mksourceid.yml
3rd/sqlite-3.43.2/sqlite3.dSYM/Contents/Resources/Relocations/x86_64/: sqlite3.yml
3rd/sqlite-3.43.2/src-verify.dSYM/Contents/: Info.plist
3rd/sqlite-3.43.2/src-verify.dSYM/Contents/Resources/DWARF/: src-verify
3rd/sqlite-3.43.2/src-verify.dSYM/Contents/Resources/Relocations/x86_64/: src-verify.yml
data/: setup-settings.sql
include/: config.h
include/freetds/: encodings.h  version.h
mib/: guardwatch-agent.mib
res/macosx/: Info.plist  PkgInfo  guardwatch-running.icns  guardwatch.icns
res/windows/: guardwatch-registry.manifest  guardwatch-registry.rc  guardwatch.rc  registry.h  resource.h
script/: make-install.nsi
src/: althttpd.c  gw_app.c  gw_app.h  gw_httpd.c  gw_httpd.h  gw_mssql.c  gw_mssql.h  gw_os.c  gw_os.h  gw_ps.c  gw_ps.h  gw_snmpd.c  gw_snmpd.h  gw_sql.c  gw_sql.h  gw_sqlite.c  gw_sqlite.h  gw_ws.c  gw_ws.h  mustach-json-c.h
src/linux/: gw_main.c  gw_os.c
src/macosx/: gw_main.m
src/windows/: gw_main.c  gw_reg.c  gw_win.c  gw_win.h
test/: gw_snmp_test.c
www/: index.html
